# arcane_suite

./: .gitignore  CHANGES.rst  README.md  README.rst  autoformat_pep8.sh  requirements.txt  setup.cfg  setup.py
Documentation/: Backlog.rst  Design_and_Philosophy.rst  README.rst  quick_and_dirty_RGB_cookbook.md
containers/otfms/: Dockerfile
scripts/: OTF_imaging_and_selfcal_worker.py  master_for_OTF_imaging_and_selfcal_workers.py  report_creator_OTF_imaging_and_selfcal.py
src/: init_otfms.py
src/arcane_pipelines/cias/: Snakefile  cias_defaults.py  cias_pipeline_util.py  init_cias_pipeline.py
src/arcane_pipelines/isaac/: README.md  Snakefile  init_isaac_pipeline.py  isaac_defaults.py  isaac_pipeline_util.py
src/arcane_pipelines/otfms/: Snakefile  init_otfms_pipeline.py  otf_pipeline_util.py  otf_pointing.py  otfms_clean_up.py  otfms_defaults.py  otfms_merge.py  otfms_noise_diode_flagging.py  otfms_otf_pointing_correction.py  otfms_pipeline_util.py  otfms_pointing_diagnostics.py  otfms_rename_otf_pointing.py  otfms_split.py  otfms_split_otf_scans_by_pointing.py
src/arcane_util/: pipeline.py
src/arcane_utils/: casa_wrapper.py  fits_wrapper.py  globals.py  misc.py  ms_wrapper.py  pipeline.py  time.py  tools.py  visual_diagnostics.py
templates/: OTF_imaging_and_selfcal_worker_template.cfg  crosscal_template.yml  flagging_template.yml  imaging_and_selfcal_pipeline_template.cfg  imaging_and_selfcal_template.yml  otfms_worker_template.sh  pybds_image_process_params.json  srun_crosscal_template.sh  srun_flagging_template.sh  srun_imaging_and_selfcal_pipeline.sh  srun_imaging_and_selfcal_worker_template.sh  srun_otfms_template.sh  template_OTF_correction_pipeline.cfg
workflows/: README.rst
workflows/ms2otfms/: README.rst
workflows/ms2otfms/workflow/: Snakefile  config.yaml
workflows/otfms/: config.yaml
(+24 files in other folders)
