[metadata]
name = arcane_suite
version = 0.1.1
description = arcane_suite is an arbitrary set of radio astronomical pipelines using the Snakemake workflow manager
long_description = file: README.rst
license = BSD 3-Clause License
url = https://github.com/rstofi/arcane-suite
author = Kristof Rozgonyi
author_email = Kristof.Rozgonyi@physik.uni-muenchen.de
classifiers =
    Topic :: Scientific/Engineering :: Astronomy
    Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
install_requires =
    autopep>=1.7.0
    numpy>=1.22.0
    scipy>=1.7.1
    astropy>=5.0
    python-casacore>=3.4.0

[options.entry_points]
console_scripts =
    arcane_init_otfms=arcane_pipelines.otfms.init_otfms_pipeline:main
    arcane_otfms_split=arcane_pipelines.otfms.otfms_split:main
    arcane_otfms_otf_pointing_correction=arcane_pipelines.otfms.otfms_otf_pointing_correction:main
    arcane_otfms_merge=arcane_pipelines.otfms.otfms_merge:main

